test/sema/typeck/pattern/lit-char-wrong-type.dora
fn f(x: (String, Int64)) {
    let (y, 'a') = x;
}

//====================
// error: Int64 expected but got type Char.
// --> lit-char-wrong-type.dora:2:13
//  | fn f(x: (String, Int64)) {
//  |     let (y, 'a') = x;
//                ~~~
//  | }
//  | 
// 1 error found.
